tests/cli/apply/snapshots/main__cli__apply__validate_checksum__fails_if_migration_file_is_missing.snap
---
source: tests/cli/apply/validate_checksum.rs
expression: stderr
---
Error: 
   0: The migration file '[timestamp]_AddAdminUser' does not exist.

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
