tests/cli/apply/snapshots/main__cli__apply__validate_checksum__ok_if_no_changes.snap
---
source: tests/cli/apply/validate_checksum.rs
expression: stdout
---
Schema files successfully executed!
Event files successfully executed!
